--- a/test_catkin/src/testrobots/CMakeLists.txt
+++ b/test_catkin/src/testrobots/CMakeLists.txt
@@ -212,6 +212,6 @@ include_directories(
 
 catkin_install_python(PROGRAMS scripts/Human_Detection.py scripts/Mapping_Node.py scripts/Panel_Detection.py scripts/Planning_Node.py
 scripts/Central_Decision.py scripts/Change_Angle.py scripts/Check_Human_Presence.py scripts/Human_Tracking_Node.py scripts/Move_Towards_Goal.py
-scripts/Specification_Checking.py scripts/Stop_All_Actions.py scripts/Track_Human.py scripts/Wait.py scripts/sensor_testing.py
+scripts/Specification_Checking.py scripts/Stop_All_Actions.py scripts/Track_Human.py scripts/Wait.py scripts/sensor_testing.py scripts/move_base_goal.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
