--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ catkin_ws/src/construction_Robot/scripts/Sensing_Nodes/darknet/
 catkin_ws/src/construction_Robot/scripts/Sensing_Nodes/yolov3.weights
 
 test_catkin/src/turtlebot3_simulations
+
+test_catkin/src/testrobots/darknet
+
+*.weights
