--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,8 @@ test_catkin/src/turtlebot3
 
 test_catkin/src/testrobots/CMakeLists.txt
 
-test_catkin/src/rtamt4ros/
+# test_catkin/src/rtamt4ros/
 
-test_catkin/src/rtamt/
+# test_catkin/src/rtamt/
 
 test_catkin/src/realsense
